2009-09-10  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/ and lib64/: Comment in msvcrXX.def and in msvcrt.def the
	symbols pow and powf.

2009-09-09  Mook  <mook.gcc@gmail.com>

	Patch/2820174 r=NightStrike
	* configure.ac: Automatically detect whether to build the 32 or 64
	bit library based on what the compiler accepts.
	* Makefile.am: Explicitly use -m64 for 64 bit library.
	* configure, Makefile.in: Regenerated.

2009-09-08  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/readcr8.c, intrincs/writecr8.c: readcr8() and writecr8()
	not prototyped in intrin.h for x86. Manually added prototypes to the
	relevant *.c files.

2009-09-08  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/*.c:  Update all declarations to match intrin.h. Include
	only intrin.h, not windows.h.  Removed aliases for non-underscored
	InterlockedExchange and InterlockedCompareExchange.  Added non-
	underscored aliases for InterlockedAdd, InterlockedAdd64 and
	InterlockedBitTestAndComplement, which aren't actually prototyped
	in intrin.h but are wrappers around other intrinsics.  currentfiber.c,
	currentteb.c, fiberdata.c, membarrier.c, mul128ex.c and umul128ex.c
	remain untouched.
	* Makefile.am (membarrier.c): Moved under src_libmingwex32 (x86-only)
	* Makefile.in: Regenerated.

2009-09-08  Kai Tietz  <kai.tietz@onevision.com>

	* Add __volatile__ to __asm__ statements.

2009-09-05  Ozkan Sezer  <sezeroz@gmail.com>

	* _findfirst64i32, _findnext64i32, _fstat64i32, _fstat, _stat64i32,
	_stat, _wfindfirst64i32, _wfindnext64i32, _wstat64i32, _wstat: Zero
	the input buffer in case the function we wrap around fails. This
	fixes the native builds of binutils/bfd due to an unitialized use
	warning about a stat structure, too.

2009-09-05  Kai Tietz  <kai.tietz@onevision.com>

	* misc/_crt_veh.c: Removed.
	* crt/crtexe.c (_CRT_VEH): Removed.
	* Makefile.am (misc/_crt_veh.c): Removed.
	* Makefile.in: Regenerated.

2009-09-04  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crt_handler.c: New.