@@ -428,6 +428,7 @@ _memccpy
 _memicmp
 _mkdir
 _mkgmtime
+_mkgmtime32 = _mkgmtime
 _mkgmtime64
 _mktemp
 _mktime64
@@ -697,6 +698,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 = gmtime
 is_wctype
 isalnum
 isalpha
@@ -728,6 +730,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 = localtime
 log
 log10
 log10f
