@@ -429,6 +429,7 @@ _memccpy
 _memicmp
 _mkdir
 _mkgmtime
+_mkgmtime32 = _mkgmtime
 _mkgmtime64
 _mktemp
 _mktime64
@@ -698,6 +699,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 = gmtime
 is_wctype
 isalnum
 isalpha
@@ -729,6 +731,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 = localtime
 log
 log10
 log10f
