@@ -1433,6 +1433,7 @@ gets
 getwc
 getwchar
 gmtime
+_gmtime32 = gmtime
 is_wctype
 isalnum
 isalpha
@@ -1464,6 +1465,7 @@ ldexp
 ldiv
 localeconv
 localtime
+_localtime32 = localtime
 log
 log10
 malloc
